<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_quiz"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hengcheng.triviaquiz.QuizActivity">

    <TextView
        android:text="@string/question_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:id="@+id/questionView"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:background="@android:color/holo_red_light"
        android:textColor="@android:color/black"
        android:text="@string/answer2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/answerButton2"
        android:layout_alignBaseline="@+id/answerButton1"
        android:layout_alignBottom="@+id/answerButton1"
        android:layout_toRightOf="@+id/answerButton1"
        android:layout_toEndOf="@+id/answerButton1"
        android:layout_marginLeft="37dp"
        android:layout_marginStart="37dp" />

    <Button
        android:background="@android:color/holo_blue_light"
        android:textColor="@android:color/black"
        android:text="@string/answer4"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/answerButton4"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/answerButton2"
        android:layout_alignStart="@+id/answerButton2"
        android:layout_marginBottom="100dp" />

    <Button
        android:background="@android:color/holo_green_light"
        android:textColor="@android:color/black"
        android:text="@string/answer3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/answerButton3"
        android:layout_alignBaseline="@+id/answerButton4"
        android:layout_alignBottom="@+id/answerButton4"
        android:layout_alignLeft="@+id/answerButton1"
        android:layout_alignStart="@+id/answerButton1" />

    <Button
        android:background="@android:color/holo_orange_light"
        android:textColor="@android:color/black"
        android:text="@string/answer1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/answerButton1"
        android:layout_marginLeft="65dp"
        android:layout_marginStart="65dp"
        android:layout_above="@+id/answerButton3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="118dp" />

    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/answerButton3"
        android:layout_alignRight="@+id/answerButton4"
        android:layout_alignEnd="@+id/answerButton4"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="36dp"
        android:id="@+id/timer" />

    <TextView
        android:text="@string/score"
        android:textSize="50sp"
        android:id="@+id/scoreView"
        android:layout_width="500dp"
        tools:text="0"
        android:layout_marginBottom="114dp"
        android:layout_above="@+id/answerButton2"
        android:layout_toRightOf="@+id/answerButton1"
        android:layout_toEndOf="@+id/answerButton1"
        android:layout_height="100dp" />
</RelativeLayout>
